--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url: @db.connectionURL@
+spring.datasource.url:@db.connectionURL@
 spring.datasource.username=@db.username@
 spring.datasource.password=@db.password@
-spring.datasource.driverClassName= @db.driverClass@
-spring.jpa.hibernate.ddl-auto=update
+# suppress inspection "SpringBootApplicationProperties"
+spring.datasource.driverClassName=@db.driverClass@
+spring.jpa.database-platform=@hibernate.dialect@
