Spring security; Added security filters, added CORS simple filter, added custom matchers for the application in spring security configuration, added a method returning currently logged in suer for basic authentication;

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@ target/
 src/main/resources/node_modules
 !.mvn/wrapper/maven-wrapper.jar
 
+
+## JavaScript (generated from .ts)##
+.js
+.map
+
 ### STS ###
 .apt_generated
 .classpath
